--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
     <meta charset="UTF-8">
-    <title>Linked List</title>
+    <title>Listas Enlazada</title>
     <link href="style/styles.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="scripts/linked_list.js">
@@ -10,10 +10,10 @@
 
 </head>
 <body>
-     <h5>Añadir:</h5>
+     <h5>Ingrese un nombre para añadirlo a la lista:</h5>
      <input id="texting">
      <button type="button" type="submit" onclick="pushing(),printList()">Enviar</button>
-     <button type="button"  onclick="printList()">Ver lista</button>
+     <p class="lead">Lista de Nombres:(haga click sobre el nombre para borrarlo )</p>
     <div id="list"></div>
     <p onload="printList()"></p>
 </body>
