--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 </head>
 <body>
-     <h5>Ingrese un nombre para añadirlo a la lista:</h5>
+     <h5>Ingrese el nombre del nuevo registro:</h5>
      <input id="texting">
-     <button type="button" type="submit" onclick="pushing(),printList()">Enviar</button>
+     <button1 type="button" type="submit" onclick="pushing(),printList()" id="bnt">Enviar</button1>
      <p class="lead">Lista de Nombres:(haga click sobre el nombre para borrarlo )</p>
     <div id="list"></div>
     <p onload="printList()"></p>
